--- a/todo-frontend/package.json
+++ b/todo-frontend/package.json
@@ -14,6 +14,8 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "react-toastify": "^6.0.9",
+    "use-sound": "^1.0.2",
     "uuid": "^8.3.1"
   },
   "scripts": {
